<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.softwareag</groupId>
	<artifactId>lora</artifactId>
	<version>1.0-SNAPSHOT</version>
	
	<packaging>pom</packaging>

	<modules>
		<module>lora-interface</module>
		<module>lora-codec-ms</module>
		<module>lora-ns-ms</module>
		<module>lora-codec-cayennelpp</module>
		<module>lora-codec-nke</module>
		<module>lora-codec-pyrescom-classair</module>
		<module>lora-codec-senlab</module>
		<module>lora-codec-axioma</module>
		<module>lora-codec-atim-th</module>
		<module>lora-codec-atim-tm2d</module>
		<module>lora-codec-atim-tmxd</module>
		<module>lora-codec-acs-switch</module>
		<module>lora-ns-kerlink</module>
		<module>lora-ns-objenious</module>
		<module>lora-ns-orbiwise</module>
		<module>lora-ns-loriot</module>
		<module>lora-ns-ttn</module>
		<module>lora-codec-elsys</module>
		<module>lora-codec-ttn</module>
		<module>lora-codec-lansitec</module>
		<module>lora-codec-example</module>
	</modules>
  
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<c8y.version>1006.4.0</c8y.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-boot-dependencies.version>2.2.4.RELEASE</spring-boot-dependencies.version>
	</properties>
	<repositories>
		<repository>
			<id>cumulocity</id>
			<layout>default</layout>
			<url>http://download.cumulocity.com/maven/repository</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>cumulocity</id>
			<layout>default</layout>
			<url>http://download.cumulocity.com/maven/repository</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.nsn.cumulocity.clients-java</groupId>
				<artifactId>java-client</artifactId>
				<version>${c8y.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nsn.cumulocity.model</groupId>
				<artifactId>device-capability-model</artifactId>
				<version>${c8y.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nsn.cumulocity.clients-java</groupId>
				<artifactId>microservice-dependencies</artifactId>
				<version>${c8y.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>